# libchan

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/scripts/: junit_to_summary.py  showcase_to_bench_json.py
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_bulk.c  bench_lock_overhead.c  bench_mpmc.c  bench_ring_cmp.c  bench_showcase.c  bench_throughput.c  run_park_cmp.sh  run_showcase.sh
bench/crosslang/: README.md  run_comparison.sh
bench/crosslang/go/: go.mod  main.go
bench/crosslang/libchan/: CMakeLists.txt  bench.c
bench/crosslang/rust/: Cargo.toml
bench/crosslang/rust/src/: main.rs
cmake/: CompilerWarnings.cmake  Coverage.cmake  Sanitizers.cmake
dev/bench/: data.js  index.html
doc/: api_reference.md  architecture.md  benchmarks.md  comparison.md  design.md  getting_started.md
examples/: CMakeLists.txt  burst_pipeline.c  dplane_pipeline.c  dplane_pipeline_mpsc.c  multi_recv_fanin.c  multi_recv_select.c  multi_recv_spin.c  ping_pong.c  ping_pong_buffered.c  producer_consumer.c  request_reply.c  select_cancel.c  select_fairness.c  sieve_primes.c  snake_chan.c  worker_pool.c
include/: libchan.h
src/: chan_core.c  chan_recv.c  chan_send.c  libchan_internal.h  park.c  ring_buffer.c  ring_lf.c  ring_lf.h  select.c  util.c  waitq.c
tests/: CMakeLists.txt  test_basic.c  test_blocking.c  test_bulk.c  test_burst.c  test_close.c  test_mpmc.c  test_nm_stress.c  test_select.c  test_spsc_order.c  test_stress.c  test_timeout.c
